--- a/gitcodex/src/main/resources/templates/githubsearch/home.html
+++ b/gitcodex/src/main/resources/templates/githubsearch/home.html
@@ -4,244 +4,16 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Drag and Drop File Uploading</title>
+	<title>File Uploading</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	
 	<link rel="canonical" href="https://css-tricks.com/examples/DragAndDropFileUploading/">
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<link rel="stylesheet" href="theme.css" />
+	<link type="text/css" href="css/theme.css" rel="stylesheet" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,400" />
     <link href="https://fonts.googleapis.com/css?family=Amaranth" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cormorant" rel="stylesheet">
-	<style>
 
-		html
-		{
-		}
-			body
-			{
-				font-family: Roboto, sans-serif;
-				color: #1BBC9B;
-				background-color: #051923;
-				padding: 5rem 1.25rem; /* 80 20 */
-			}
-
-			.container
-			{
-				width: 100%;
-				max-width: 680px; /* 800 */
-				text-align: center;
-				margin: 0 auto;
-                font-weight: bold;
-			}
-
-				.container h1
-				{
-					font-size: 70px;
-					font-weight: 300;
-					color: #F3F9D2;
-					margin-bottom: 40px;
-                    font-weight: bold;
-                    font-family: 'Cormorant', sans-serif;
-				}
-				.container h1 a:hover,
-				.container h1 a:focus
-				{
-					color: #ffffff;
-				}
-
-				.container nav
-				{
-					margin-bottom: 40px;
-				}
-					.container nav a
-					{
-						border-bottom: 2px solid #c8dadf;
-						display: inline-block;
-						padding: 4px 8px;
-						margin: 0 5px;
-					}
-					.container nav a.is-selected
-					{
-						font-weight: 700;
-						color: #1BBC9B;
-						border-bottom-color: currentColor;
-					}
-					.container nav a:not( .is-selected ):hover,
-					.container nav a:not( .is-selected ):focus
-					{
-						border-bottom-color: #0f3c4b;
-					}
-
-				.container footer
-				{
-					color: #F3F9D2;
-					margin-top: 40px;
-				}
-					.container footer p + p
-					{
-						margin-top: 1em;
-					}
-					.container footer a:hover,
-					.container footer a:focus
-					{
-						color: #1BBC9B;
-					}
-
-				.box
-				{
-					font-size: 1.25rem; /* 20 */
-					position: relative;
-					padding: 100px 20px;
-				}
-				.box.has-advanced-upload
-				{
-					outline: 2px dashed #92b0b3;
-					outline-offset: -10px;
-
-					-webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
-					transition: outline-offset .15s ease-in-out, background-color .15s linear;
-				}
-				.box.is-dragover
-				{
-					outline-offset: -20px;
-					outline-color: #ffffff;
-					background-color: #fff;
-				}
-					.box__dragndrop,
-					.box__icon
-					{
-						display: none;
-					}
-					.box.has-advanced-upload .box__dragndrop
-					{
-						display: inline;
-					}
-					.box.has-advanced-upload .box__icon
-					{
-						width: 100%;
-						height: 80px;
-						fill: #92b0b3;
-						display: block;
-						margin-bottom: 40px;
-					}
-
-					.box.is-uploading .box__input,
-					.box.is-success .box__input,
-					.box.is-error .box__input
-					{
-						visibility: hidden;
-					}
-
-					.box__uploading,
-					.box__success,
-					.box__error
-					{
-						display: none;
-					}
-					.box.is-uploading .box__uploading,
-					.box.is-success .box__success,
-					.box.is-error .box__error
-					{
-						display: block;
-						position: absolute;
-						top: 50%;
-						right: 0;
-						left: 0;
-
-						-webkit-transform: translateY( -50% );
-						transform: translateY( -50% );
-					}
-					.box__uploading
-					{
-						font-style: italic;
-					}
-					.box__success
-					{
-						-webkit-animation: appear-from-inside .25s ease-in-out;
-						animation: appear-from-inside .25s ease-in-out;
-					}
-						@-webkit-keyframes appear-from-inside
-						{
-							from	{ -webkit-transform: translateY( -50% ) scale( 0 ); }
-							75%		{ -webkit-transform: translateY( -50% ) scale( 1.1 ); }
-							to		{ -webkit-transform: translateY( -50% ) scale( 1 ); }
-						}
-						@keyframes appear-from-inside
-						{
-							from	{ transform: translateY( -50% ) scale( 0 ); }
-							75%		{ transform: translateY( -50% ) scale( 1.1 ); }
-							to		{ transform: translateY( -50% ) scale( 1 ); }
-						}
-
-					.box__restart
-					{
-						font-weight: 700;
-					}
-					.box__restart:focus,
-					.box__restart:hover
-					{
-						color: #1BBC9B;
-					}
-
-					.js .box__file
-					{
-						width: 0.1px;
-						height: 0.1px;
-						opacity: 0;
-						overflow: hidden;
-						position: absolute;
-						z-index: -1;
-					}
-					.js .box__file + label
-					{
-						max-width: 80%;
-						text-overflow: ellipsis;
-						white-space: nowrap;
-						cursor: pointer;
-						display: inline-block;
-						overflow: hidden;
-					}
-					.js .box__file + label:hover strong,
-					.box__file:focus + label strong,
-					.box__file.has-focus + label strong
-					{
-						color: #ffffff;
-					}
-					.js .box__file:focus + label,
-					.js .box__file.has-focus + label
-					{
-						outline: 1px dotted #000;
-						outline: -webkit-focus-ring-color auto 5px;
-					}
-						.js .box__file + label *
-						{
-							/* pointer-events: none; */ /* in case of FastClick lib use */
-						}
-
-					.no-js .box__file + label
-					{
-						display: none;
-					}
-
-					.no-js .box__button
-					{
-						display: block;
-					}
-					.box__button
-					{
-						font-weight: 700;
-						color: #e5edf1;
-						background-color: #1BBC9B;
-						display: block;
-						padding: 8px 16px;
-						margin: 40px auto 0;
-					}
-						.box__button:hover,
-						.box__button:focus
-						{
-							background-color: #0f3c4b;
-						}
-
-	</style>
 
 	<!-- remove this if you use Modernizr -->
 	<script>(function(e,t,n){var r=e.querySelectorAll("html")[0];r.className=r.className.replace(/(^|\s)no-js(\s|$)/,"$1js$2")})(document,window,0);</script>
@@ -249,9 +21,6 @@
 </head>
 
 <body>
-
-
-
 
 <div class="container" role="main">
 
