--- a/gitcodex/src/main/resources/templates/githubsearch/githubsearchresults.html
+++ b/gitcodex/src/main/resources/templates/githubsearch/githubsearchresults.html
@@ -49,40 +49,37 @@
 	</table>
 
        	<!-- Pagination Bar -->
-<!-- 		<div th:if="${not #lists.isEmpty(filePage)}"> -->
-<!-- 			<div class="text-center"> -->
-<!-- 				<nav aria-label="Page navigation"> -->
-<!-- 					<ul class="pagination"> -->
-<!-- 						<li -->
-<!-- 							th:class="${not filePage.hasPrevious()}? 'disabled page-item' : 'page-item'"> -->
-<!-- 							<span th:if='${not filePage.hasPrevious()}'>&laquo;</span> <a -->
-<!-- 							class="page-link" th:if='${filePage.hasPrevious()}' -->
-<!-- 							th:href="@{/polls(groupId=${param.groupId}, -->
-<!-- 			        				page=(${filePage.getNumber()}-1))}" -->
-<!-- 							title="Go to previous page">&laquo;</a> -->
-<!-- 						</li> -->
-<!-- 						<li th:each="i : ${#numbers.sequence(1, filePage.getTotalPages())}" -->
-<!-- 							th:class="${i == (filePage.getNumber()+1)}? 'active page-item' : 'page-item'"> -->
-<!-- 							<span th:if='${i == (filePage.getNumber()+1)}' th:text='${i}'>1</span> -->
-<!-- 							<a class="page-link" -->
-<!-- 							th:if='${not (i == (filePage.getNumber()+1))}' -->
-<!-- 							th:href="@{/polls(groupId=${param.groupId}, -->
-<!-- 			       				page=(${i}-1))}"> -->
-<!-- 								<span th:text='${i}'>1</span> -->
-<!-- 						</a> -->
-<!-- 						</li> -->
-<!-- 						<li -->
-<!-- 							th:class="${filePage.hasNext()}? 'page-item' : 'disabled page-item'"> -->
-<!-- 							<span th:if='${not filePage.hasNext()}'>&raquo;</span> <a -->
-<!-- 							class="page-link" th:if='${filePage.hasNext()}' -->
-<!-- 							th:href="@{/polls(groupId=${param.groupId}, -->
-<!-- 			        				page=(${filePage.getNumber()}+1))}" -->
-<!-- 							title='Go to next page'>&raquo;</a> -->
-<!-- 						</li> -->
-<!-- 					</ul> -->
-<!-- 				</nav> -->
-<!-- 			</div> -->
-<!-- 		</div> -->
+ 		<div th:if="${not #lists.isEmpty(filePage)}"> 
+			<div class="text-center">
+				<nav aria-label="Page navigation">
+					<ul class="pagination">
+						<li
+							th:class="${not filePage.hasPrevious()}? 'page-item disabled' : 'page-item'">
+							<span class="page-link" th:if='${not filePage.hasPrevious()}'>&laquo;</span> <a
+							class="page-link" th:if='${filePage.hasPrevious()}'
+							th:href="@{/uploadFile(page=(${filePage.getNumber()}-1))}"
+							title="Go to previous page">&laquo;</a>
+						</li>
+						<li th:each="i : ${#numbers.sequence(pIni, pFin)}"
+							th:class="${i == (filePage.getNumber()+1)}? 'active page-item' : 'page-item'">
+							<span class="page-link" th:if='${i == (filePage.getNumber()+1)}' th:text='${i}'>1</span>
+							<a class="page-link"
+							th:if='${not (i == (filePage.getNumber()+1))}'
+							th:href="@{/uploadFile(page=(${i}-1))}">
+								<span th:text='${i}'>1</span>
+						</a>
+						</li>
+						<li
+							th:class="${filePage.hasNext()}? 'page-item' : 'disabled page-item'">
+							<span class="page-link" th:if='${not filePage.hasNext()}'>&raquo;</span> <a
+							class="page-link" th:if='${filePage.hasNext()}'
+							th:href="@{/uploadFile(page=(${filePage.getNumber()}+1))}"
+							title='Go to next page'>&raquo;</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</div> 
     
 <!--     <div th:replace="fragments/layout :: footer"></div> -->
 </div>
